webhose is working at the moment (not persistant)

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,3 +1,26 @@
 .list-group-item {
   line-height: 2.5;
 }
+
+table,
+th,
+td {
+  border: 1px solid black;
+}
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td,
+th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
