--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,88 +1,38 @@
-.list-group-item {
-  line-height: 2.5;
+
+
+body {
+  width:100%;
+  height:100%;
+  background: #ffffff;
+  background-image: radial-gradient(circle, #c1cb07, #82db5d, #33e39e, #00e6d6, #04e4fc);
+  
+  background-size: auto;
+}
+.container {
+  margin: auto;
+  width: 50%;
+}
+.row-centered {
+    text-align:center;
+}
+.jumbotron {
+  background-image: radial-gradient(circle, #c2c4be, #a5a9a5, #8a8f8c, #707574, #585c5c);
+  text-align: center;
+}
+input {
+  margin: auto;
+}
+#submit {
+  background-image: radial-gradient(circle, #c2c4be, #a5a9a5, #8a8f8c, #707574, #585c5c);
+  color: black;
 }
 
-table,
-th,
-td {
-  border: 1px solid black;
+.navbar {
+  background-image: radial-gradient(circle, #c2c4be, #a5a9a5, #8a8f8c, #707574, #585c5c);
+  color: black;
 }
 
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
+.footer-copyright {
+  background-image: radial-gradient(circle, #c2c4be, #a5a9a5, #8a8f8c, #707574, #585c5c) !important;
+  max-height: 200px;
 }
-
-td,
-th {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
-}
-
-tr:nth-child(even) {
-  background-color: #dddddd;
-}
-/**
- * This injects Tailwind's base styles, which is a combination of
- * Normalize.css and some additional base styles.
- *
- * You can see the styles here:
- * https://github.com/tailwindcss/tailwindcss/blob/master/css/preflight.css
- *
- * If using `postcss-import`, use this import instead:
- *
- * @import "tailwindcss/preflight";
- */
-@tailwind preflight;
-
-/**
- * This injects any component classes registered by plugins.
- *
- * If using `postcss-import`, use this import instead:
- *
- * @import "tailwindcss/components";
- */
-@tailwind components;
-
-/**
- * Here you would add any of your custom component classes; stuff that you'd
- * want loaded *before* the utilities so that the utilities could still
- * override them.
- *
- * Example:
- *
- * .btn { ... }
- * .form-input { ... }
- *
- * Or if using a preprocessor or `postcss-import`:
- *
- * @import "components/buttons";
- * @import "components/forms";
- */
-
-/**
- * This injects all of Tailwind's utility classes, generated based on your
- * config file.
- *
- * If using `postcss-import`, use this import instead:
- *
- * @import "tailwindcss/utilities";
- */
-@tailwind utilities;
-
-/**
- * Here you would add any custom utilities you need that don't come out of the
- * box with Tailwind.
- *
- * Example :
- *
- * .bg-pattern-graph-paper { ... }
- * .skew-45 { ... }
- *
- * Or if using a preprocessor or `postcss-import`:
- *
- * @import "utilities/background-patterns";
- * @import "utilities/skew-transforms";
- */
