--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,24 +1,47 @@
-<div id="home">
-  <div class="container">
-    <div class="row">
-      <div class="col-8 offset-2">
-        <h1 class="jumbotron">Verita$</h1>
-        <hr>
-       <span class="fa fa-camera fa-10x"></span>
-        <div><strong>Scan It</strong></div>
-        <hr>
-        <form class="clearfix mb-4" action="POST">
-          <div class="form-group">
-            <label for="example-text"><b>Item Lookup</b></label>
-            <input type="text" id="example-text" class="form-control" aria-describedby="example-text" placeholder="Enter Example Text">
-          </div>
-          <button id="submit" class="btn btn-primary float-right">Submit</button>
-        </form>
-        <div class="container" id="map"></div>
-      </div>
+
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <a class="navbar-brand" href="#">Verita$</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#"></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>    
+      </ul>
+    </div>  
+  </nav>
+
+  <div class="container" style="margin-top:30px">
+    <div class="row row-centered">
+          <form class="col-sm-12 col-centered" action="POST">
+            <div class="form-group">
+              <label for="example-text"><b>Find Your Item</b></label>
+              <input type="text" id="example-text" class="form-control col-sm-4" aria-describedby="example-text" placeholder="Text">
+            </div>
+            <button id="submit" class="btn btn-primary">Submit</button>
+          </form>
+  
     </div>
   </div>
-</div>
+
+    <!-- Footer Links -->
+
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3 fixed-bottom">© 2019 Copyright:
+      <a href="#"> Verita$</a>
+    </div>
+    <!-- Copyright -->
+
+  </footer>
+
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/js/index.js"></script>
