changed 404, created partials

--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -1,9 +1,8 @@
 <div class="container">
-  <div class="jumbotron mt-4">
-    <h1 class="display-4 text-center">404 Not Found
-      <span role="img" aria-label="Face with rolling eyes">🙄</span>
-      <h4>{{qErr}}</h4>
-    </h1>
-    <a href="/">← Back To Home</a>
+  <div class="jumbotron mt-5 p-5">
+    <h1 class="display-4 text- fourohfour">404<br />HIT DIDN'T MATCH</h1>
+    <img src="https://media.giphy.com/media/9SJazLPHLS8roFZMwZ/giphy.gif" alt="404notfoundgiphy">
+    <h4>{{qErr}}</h4>
+    <a class="btn btn-warning" href="/">← Home</a>
   </div>
 </div>
