all about the routes

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,7 +6,7 @@
         <input type="text" id="item_title" name="item_title" class="form-control col-sm-4 text-center"
           aria-describedby="item_title" placeholder="Type the item here" autocomplete="off" />
       </div>
-      <input id="submit" class="btn btn-primary" type="submit" value="Click here to submit the form" />
+      <input id="submit" class="btn btn-primary" type="submit" value="Search!" />
     </form>
   </div>
 </div>
