--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,19 +1,20 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
     <a id="brand" class="navbar-brand" href="/">Verita$</a>
+    <small>Reviews at your convenience</small>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
     </button>
-    {{!-- <div class="collapse navbar-collapse" id="collapsibleNavbar">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="#"></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-    </ul>
-  </div> --}}
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="/">New Search</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/app/reviews/">Search Reviews</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/app/products/">Search Products</a>
+            </li>
+        </ul>
+    </div>
 </nav>
